--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ html {
     background-color: rgb(255, 255, 255);
 }
 
-.h1-title, h2 {
+.h1, h2 {
     font-family: raleway, sans-serif;
     font-weight: 700;
     font-size: 20px;
