--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,7 @@ img {
 }
 
 /*  Typographies */
-@font-face {
-     font-family: raleway ;
-     src: url('../polices/Raleway.ttf') format('ttf');
-}
+
 
 /*  Paramètres général */
 html {
@@ -20,25 +17,25 @@ html {
 }
 
 .h1-title, h2 {
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-weight: 700;
     font-size: 20px;
 }
 
 h3 {
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-weight: 600;
     font-size: 17px;
 }
 
 p {
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-weight: normal;
     font-size: 15px;
 }
 
 a {
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     text-decoration: none;
     color: black;
 }
@@ -54,7 +51,7 @@ a {
 
 .main-nav-items {
     width: 300px;
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-size: 16px;
     display: flex;
     justify-content: space-between;
@@ -107,7 +104,7 @@ main {
 }
 
 .search-city input[type="text"] {
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-weight: 600;
     font-size: 18px;
 }
@@ -119,7 +116,7 @@ main {
 .button-search {
     border: none;
     border-radius: 0 10px 10px 0;
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-weight: 600;
     font-size: 18px;
     color: white;
@@ -156,7 +153,7 @@ main {
     align-items: center;
 }
 .filters-items:hover {
-    background-color: rgb(242, 242, 242, 10);
+    background-color: rgba(242, 242, 242, 0.8);
     color: #0065FC;
 }
 
@@ -225,7 +222,7 @@ main {
 
 .cards-marseille {
     width: 30%;
-    transition: 0.5s;
+    transition: transform 0.5s;
 }
 @media (max-width: 1330px) and (min-width: 380px) {
     .cards-marseille {
@@ -392,7 +389,7 @@ aside p {
 
 .footer-nav ul {
     list-style-type: none;
-    font-family: raleway, sans-serif;
+    font-family : 'Raleway', sans-serif ;
     font-size: 16px;
     line-height: 30px;
     padding-left: 0;
@@ -451,8 +448,9 @@ aside p {
     }
     .cards-premier, .cards-second, .cards-third,
     .cards-four, .cards-five, .cards-six {
-        width: 45%;
+        width: 47%;
         margin-bottom: 3%;
+        margin-right: 0;
     }
     .cards-four:nth-child(3) {
         order: 2;
